Refactor BMI Calculator HTML and JavaScript
Updated the BMI Calculator HTML structure and styling. Added input validation and improved the result display with animations.

--- a/index.html
+++ b/index.html
@@ -361,7 +361,8 @@
             <div class="bmi-value" id="bmiValue">0.0</div>
             <div class="bmi-category" id="bmiCategory">Normal Weight</div>
             <div class="bmi-description" id="bmiDescription">Your BMI indicates that you are at a healthy weight for your height.</div>
-            <a href="#" class="learn-more">Learn more?</a>
+           <a href="https://www.cdc.gov/bmi/about/index.html" class="learn-more" target="_blank" rel="noopener noreferrer">Learn more?</a>
+
         </div>
     </div>
 
@@ -433,3 +434,4 @@
     </script>
 </body>
 </html>
+
